<resources>
    <string name="app_name">abha-create-verify-android</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="create_abha">Create ABHA</string>
    <string name="verify_abha">Verify ABHA</string>
    <string name="aadhaar_validation">Aadhaar Validation</string>
    <string name="choose_auth_mode">Choose Authentication Mode</string>
    <string name="enter_aadhaar_number">Enter your Aadhaar Number</string>
    <string name="do_you_agree_with_the_terms_and_conditions">Do you agree with the terms and conditions</string>
    <string name="proceed">Proceed</string>
    <string name="check_your_aadhaar_linked_mobile_number">Check your aadhaar linked mobile number</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="incorrect_otp">Incorrect OTP</string>
    <string name="correct_otp">Correct OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="dd_mm_yyyy">DD-MM-YYYY</string>
    <string name="gender">Gender</string>
    <string name="enter_f_m_other">Enter F/M/Other</string>
    <string name="state">State</string>
    <string name="enter_state">Enter State</string>
    <string name="district">District</string>
    <string name="enter_district">Enter District</string>
    <string name="make_sure_your_demographics_matches_with_aadhaar">Make sure your demographics matches with aadhaar</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="mobile_number_required_for_abha_creation">Mobile number required for ABHA creation</string>
    <string name="abha_address">ABHA address</string>
    <string name="enter_abha_address">Enter ABHA Address</string>
    <string name="preferred_abha_address">Preferred</string>
    <string name="create_default_address">Create default address</string>
    <string name="or">OR</string>
    <string name="terms_and_conditions_text">• I am voluntarily sharing my Aadhaar Number / Virtual ID issued by the Unique Identification Authority of India (“UIDAI”), and my demographic information for the purpose of
        creating an Ayushman Bharat Health Account number (“ABHA number”) and Ayushman Bharat Health Account address (“ABHA Address”). I authorize NHA to use my Aadhaar
        number / Virtual ID for performing Aadhaar based authentication with UIDAI as per the provisions of the Aadhaar (Targeted Delivery of Financial and other Subsidies, Benefits
        and Services) Act, 2016 for the aforesaid purpose. I understand that UIDAI will share my e-KYC details, or response of “Yes” with NHA upon successful authentication.\n\n

        • I consent to usage of my ABHA address and ABHA number for linking of my legacy (past) government health records and those which will be generated during this encounter.\n\n

        • I authorize the sharing of all my health records with healthcare provider(s) for the purpose of providing healthcare services to me during this encounter.\n\n

        • I consent to the anonymization and subsequent use of my government health records for public health purposes.</string>


</resources>