<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DemographicActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Abhacreateverifyandroid.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbarAbha"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.Abhacreateverifyandroid.PopupOverlay"
            app:titleCentered="true" />

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/nameTextInputLayout"
            android:layout_marginBottom="1dp"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name"
            app:boxBackgroundColor="@color/box_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/NameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/dobTextHeadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nameTextInputLayout"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="5dp"
            android:text="@string/date_of_birth"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dobTextInputLayout"
            android:layout_below="@+id/dobTextHeadline"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:hint="@string/dd_mm_yyyy"
            app:boxBackgroundColor="@color/box_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dobEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/genderTextHeadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dobTextInputLayout"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="5dp"
            android:text="@string/gender"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/genderTextInputLayout"
            android:layout_below="@+id/genderTextHeadline"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:hint="@string/enter_f_m_other"
            app:boxBackgroundColor="@color/box_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/genderEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/stateTextHeadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/genderTextInputLayout"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="5dp"
            android:text="@string/state"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/stateTextInputLayout"
            android:layout_below="@+id/stateTextHeadline"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:hint="@string/enter_state"
            app:boxBackgroundColor="@color/box_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/stateEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/districtTextHeadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/stateTextInputLayout"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="5dp"
            android:text="@string/district"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/districtTextInputLayout"
            android:layout_below="@+id/districtTextHeadline"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:hint="@string/enter_district"
            app:boxBackgroundColor="@color/box_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/districtEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/warningMszText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/districtTextInputLayout"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="5dp"
            android:text="@string/make_sure_your_demographics_matches_with_aadhaar"
            android:textColor="@color/black"
            android:textSize="10sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/proceedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/warningMszText"
            android:layout_marginTop="10dp"
            android:background="@color/yellow"
            android:gravity="center"
            android:text="@string/proceed"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>