<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AadhaarOTPActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Abhacreateverifyandroid.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbarAbha"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.Abhacreateverifyandroid.PopupOverlay"
            app:titleCentered="true" />

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/aadhaarOTPTextInputLayout"
            android:layout_marginBottom="1dp"
            android:text="@string/check_your_aadhaar_linked_mobile_number"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/aadhaarOTPTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:hint="@string/enter_otp"
            app:boxBackgroundColor="@color/box_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/aadhaarOTPEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="7" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/incorrectOTPText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/aadhaarOTPTextInputLayout"
            android:layout_marginBottom="1dp"
            android:drawableStart="@drawable/incorrect"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:text="@string/incorrect_otp"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:textStyle="italic"
            android:visibility="invisible"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/correctOTPText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/incorrectOTPText"
            android:layout_marginBottom="1dp"
            android:drawableStart="@drawable/correct"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:text="@string/correct_otp"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:textStyle="italic"
            android:visibility="invisible"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/resendOTPText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/incorrectOTPText"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="1dp"
            android:gravity="center"
            android:text="@string/resend_otp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="normal" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/proceedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/resendOTPText"
            android:layout_marginTop="25dp"
            android:background="@color/yellow"
            android:gravity="center"
            android:text="@string/proceed"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/proceedButton"
            android:gravity="center"
            android:visibility="invisible"/>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>