<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAbhaActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Abhacreateverifyandroid.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbarAbha"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.Abhacreateverifyandroid.PopupOverlay"
            app:titleCentered="true" />

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/aadhaarTextInputLayout"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:text="@string/aadhaar_validation"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/aadhaarTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:hint="@string/enter_aadhaar_number"
            app:boxBackgroundColor="@color/box_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/aadhaarEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLines="1"
                android:maxLength="12" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@id/termsConditionsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/aadhaarTextInputLayout"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColorLink="@color/gray" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/termsConditionsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/do_you_agree_with_the_terms_and_conditions"
                android:textColorLink="@color/gray"
                android:clickable="true"
                android:linksClickable="true" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/proceedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/termsConditionsLayout"
            android:layout_marginTop="10dp"
            android:background="@color/yellow"
            android:gravity="center"
            android:text="@string/proceed"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/errorMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/proceedButton"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:textColor="@color/red"
            android:textSize="10sp" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>